z-index fix

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 .tv {
   transform: rotate3d(-10, 90, 20, 15deg);
   box-shadow: 20px 25px 50px #888888;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .sticky {
